# QTCalibrate

./: .gitignore  CMakeLists.txt  Calibration_zh_CN.ts  LICENSE  README.md  app.rc  qml.qrc  uiComponents.qrc
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: CMakeCache.txt  Calibration.cbp  Makefile  cmake_install.cmake
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-19ae4aaae5380ae1aed2.json  cache-v2-4edf415985fe646882fc.json  cmakeFiles-v1-b5b1e309462dcabd8e93.json  cmakeFiles-v1-c76a263b33cdc30d0b73.json  codemodel-v2-054511872bb0c1a76afc.json  codemodel-v2-2db397ad1daa6dca589b.json  codemodel-v2-cf86fa03944488331b9f.json  codemodel-v2-fc799666b49c5b04dcab.json  index-2020-04-22T14-39-01-0741.json  index-2020-04-23T12-32-24-0583.json  index-2020-04-24T01-51-03-0494.json  index-2020-04-24T04-51-46-0084.json  target-Calibration-Debug-2d77480c86a819ebb477.json  target-Calibration-Debug-86a40b921b9929de788c.json  target-Calibration-Debug-aa7ef4d8b8b7fedff5c8.json  target-Calibration-Debug-e73e808ce14b10232bee.json  target-Calibration_autogen-Debug-570d2f0b3a9813a35063.json
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/Calibration_autogen/6YEA5652QU/: moc_dialog.cpp  moc_mainwindow.cpp
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/Calibration_autogen/EWIEGA46WW/: qrc_uiComponents.cpp
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/Calibration_autogen/include/: ui_mainwindow.h
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Release/: CMakeCache.txt  Calibration.cbp  Makefile  cmake_install.cmake
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Release/.cmake/api/v1/reply/: cache-v2-e41147b03c7e001fde71.json  cmakeFiles-v1-3c37ece8b5a62717f7b0.json  codemodel-v2-55393bd69f61da27d78d.json  codemodel-v2-ab13fba2e4da8a09c8af.json  index-2020-04-23T13-19-30-0341.json  index-2020-04-24T03-53-09-0586.json  target-Calibration-Release-4599aeb645d60317041b.json  target-Calibration-Release-efa6adf5d9c72e81e787.json  target-Calibration_autogen-Release-d37acbbfc7e01af5fbed.json
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Release/Calibration_autogen/: mocs_compilation.cpp
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Release/Calibration_autogen/6YEA5652QU/: moc_mainwindow.cpp
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Release/Calibration_autogen/EWIEGA46WW/: qrc_uiComponents.cpp
build-Calibration-Desktop_Qt_5_14_2_MinGW_64_bit-Release/Calibration_autogen/include/: ui_dialog.h  ui_mainwindow.h
data/: camera.yml  extrinsic.yml  imagelist.yaml  intrinsic.yml  stereolist.yaml
include/: calibcoord.h  calibration.h  cvfunctions.h  dialog.h  form.h  mainwindow.h
qml/: App.qml
qml/components/: DialogBox.qml  Footer.qml  Sidebar.qml
qml/global/: Footer.qml  Sidebar.qml  qmldir
qml/page/: AboutPage.qml  MainPage.qml
qml/view/: Test.qml  V_2DCoordCalib.qml  V_3DCoordCalib.qml  V_Home.qml  V_JSONConverter.qml  V_Settings.qml
qml/window/: AboutWindow.qml  MainWindow.qml
src/: calibcoord.cpp  calibcoord.h  calibration.cpp  cvfunctions.cpp  datatrans.cpp  datatrans.h  dialog.cpp  dialog.ui  form.cpp  form.ui  main.cpp  mainwindow.cpp  mainwindow.ui  qmltableview.cpp  qmltableview.h
translation/: Calibration_zh_CN.qm  Calibration_zh_CN.ts
uiComponents/: scrollbar.qss
